--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Belajar Bootstrap</title>
+
     <!-- bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+
     <!-- bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+
     <!-- my css -->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -130,20 +133,28 @@
         <h2 class="text-center mb-4">Contact Me</h2>
         <div class="row justify-content-center">
           <div class="col-md-7">
-            <form>
+            <div class="my-alert alert alert-success alert-dismissible fade show d-none" role="alert">
+              <strong>Holy guacamole!</strong> Thank you for sending me some love.
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <form name="contact-form">
               <div class="mb-3">
                 <label for="namaLengkap" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="namaLengkap" aria-describedby="namaLengkap" />
+                <input type="text" class="form-control" id="namaLengkap" aria-describedby="namaLengkap" name="nama" />
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" />
+                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" required />
               </div>
               <div class="mb-3">
                 <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3"></textarea>
+                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
               </div>
-              <input class="btn btn-primary" type="submit" value="Kirim" />
+              <input class="btn btn-primary btn-kirim" type="submit" value="Kirim" />
+              <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                <span role="status">Loading...</span>
+              </button>
             </form>
           </div>
         </div>
@@ -155,6 +166,38 @@
       <!-- akhir footer -->
     </div>
 
+    <!-- script bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <!-- script form -->
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbwQFO3OYTx6XdMivQKu2U3AnqrRiTm7i5ibr5DYWyV3eMfzTJmnC_pOcJY6S8uUoPufCg/exec';
+      const form = document.forms['contact-form'];
+
+      const btnKirim = document.querySelector('.btn-kirim');
+      const btnLoading = document.querySelector('.btn-loading');
+      const myAlert = document.querySelector('.my-alert');
+
+      form.addEventListener('submit', (e) => {
+        e.preventDefault();
+        // ketika tombol submit diklik
+        // tampilkan tombol loading, hilangkan tombol kirim
+        btnKirim.classList.toggle('d-none');
+        btnLoading.classList.toggle('d-none');
+        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+          .then((response) => {
+            console.log('Success!', response);
+            // tampilkan alert
+            myAlert.classList.toggle('d-none');
+            // tampilkan tombol kirim
+            btnKirim.classList.toggle('d-none');
+            // hilangkan tombol loading
+            btnLoading.classList.toggle('d-none');
+            // reset form
+            form.reset();
+          })
+          .catch((error) => console.error('Error!', error.message));
+      });
+    </script>
   </body>
 </html>
