--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <!-- jumbotron -->
       <section id="home" style="padding-top: 6rem">
         <div class="container-fluid text-center ps-0 pe-0">
-          <img src="img/photo.png" alt="burung hantu di pohon" class="img-thumbnail rounded-circle" width="200px" />
+          <img data-tilt src="img/photo.png" alt="burung hantu di pohon" class="img-thumbnail rounded-circle" width="200px" />
           <h1 class="display-4">Fathan Abdul</h1>
           <h5 class="fw-light"></h5>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -287,5 +287,8 @@
       // AOS muncul hanya sekali
       AOS.init({ once: true, duration: 500 });
     </script>
+
+    <!-- tilt javascript -->
+    <script type="text/javascript" src="vanilla-tilt.min.js"></script>
   </body>
 </html>
