--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
               <a class="nav-link" href="#about">About Me</a>
               <a class="nav-link" href="#card-gallery">Card Gallery</a>
               <a class="nav-link" href="#gallery">Gallery</a>
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="#animal">Animal</a>
+              <a class="nav-link" href="#contact">Contact Me</a>
             </div>
           </div>
         </div>
@@ -185,6 +186,44 @@
       </section>
       <!-- akhir gallery -->
 
+      <!-- animal -->
+      <section id="animal">
+        <div class="container">
+          <h2 data-aos="fade-up" class="text-center mb-4">Animal</h2>
+          <div class="row">
+            <div class="col-md-6 col-lg-4 mb-3">
+              <div class="animal-box">
+                <h4 class="animal-name text-center text-light">Wolf</h4>
+                <img src="img/animal/wolf.png" alt="Wolf" class="animal-img" />
+                <a target="_blank" class="btn btn-light key-detail-btn" href="https://en.wikipedia.org/wiki/Wolf">Show Details</a>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-3">
+              <div class="animal-box">
+                <h4 class="animal-name text-center text-light">Honey Badger</h4>
+                <img src="img/animal/honey-badger.png" alt="Honey Badger" class="animal-img" />
+                <a target="_blank" class="btn btn-light key-detail-btn" href="https://en.wikipedia.org/wiki/Honey_badger">Show Details</a>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-3">
+              <div class="animal-box">
+                <h4 class="animal-name text-center text-light">Mongoose</h4>
+                <img src="img/animal/mongoose.png" alt="Mongoose" class="animal-img" />
+                <a target="_blank" class="btn btn-light key-detail-btn" href="https://en.wikipedia.org/wiki/Mongoose">Show Details</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path
+            fill="#ffffff"
+            fill-opacity="1"
+            d="M0,128L6.2,122.7C12.3,117,25,107,37,90.7C49.2,75,62,53,74,85.3C86.2,117,98,203,111,224C123.1,245,135,203,148,176C160,149,172,139,185,144C196.9,149,209,171,222,170.7C233.8,171,246,149,258,170.7C270.8,192,283,256,295,256C307.7,256,320,192,332,170.7C344.6,149,357,171,369,149.3C381.5,128,394,64,406,74.7C418.5,85,431,171,443,218.7C455.4,267,468,277,480,288C492.3,299,505,309,517,288C529.2,267,542,213,554,170.7C566.2,128,578,96,591,112C603.1,128,615,192,628,186.7C640,181,652,107,665,80C676.9,53,689,75,702,85.3C713.8,96,726,96,738,122.7C750.8,149,763,203,775,224C787.7,245,800,235,812,245.3C824.6,256,837,288,849,288C861.5,288,874,256,886,245.3C898.5,235,911,245,923,240C935.4,235,948,213,960,197.3C972.3,181,985,171,997,181.3C1009.2,192,1022,224,1034,224C1046.2,224,1058,192,1071,192C1083.1,192,1095,224,1108,229.3C1120,235,1132,213,1145,202.7C1156.9,192,1169,192,1182,192C1193.8,192,1206,192,1218,192C1230.8,192,1243,192,1255,186.7C1267.7,181,1280,171,1292,144C1304.6,117,1317,75,1329,74.7C1341.5,75,1354,117,1366,144C1378.5,171,1391,181,1403,192C1415.4,203,1428,213,1434,218.7L1440,224L1440,320L1433.8,320C1427.7,320,1415,320,1403,320C1390.8,320,1378,320,1366,320C1353.8,320,1342,320,1329,320C1316.9,320,1305,320,1292,320C1280,320,1268,320,1255,320C1243.1,320,1231,320,1218,320C1206.2,320,1194,320,1182,320C1169.2,320,1157,320,1145,320C1132.3,320,1120,320,1108,320C1095.4,320,1083,320,1071,320C1058.5,320,1046,320,1034,320C1021.5,320,1009,320,997,320C984.6,320,972,320,960,320C947.7,320,935,320,923,320C910.8,320,898,320,886,320C873.8,320,862,320,849,320C836.9,320,825,320,812,320C800,320,788,320,775,320C763.1,320,751,320,738,320C726.2,320,714,320,702,320C689.2,320,677,320,665,320C652.3,320,640,320,628,320C615.4,320,603,320,591,320C578.5,320,566,320,554,320C541.5,320,529,320,517,320C504.6,320,492,320,480,320C467.7,320,455,320,443,320C430.8,320,418,320,406,320C393.8,320,382,320,369,320C356.9,320,345,320,332,320C320,320,308,320,295,320C283.1,320,271,320,258,320C246.2,320,234,320,222,320C209.2,320,197,320,185,320C172.3,320,160,320,148,320C135.4,320,123,320,111,320C98.5,320,86,320,74,320C61.5,320,49,320,37,320C24.6,320,12,320,6,320L0,320Z"
+          ></path>
+        </svg>
+      </section>
+      <!-- akhir animal -->
+
       <!-- contact me -->
       <section id="contact">
         <div class="container-fluid pb-5">
@@ -290,5 +329,17 @@
 
     <!-- tilt javascript -->
     <script type="text/javascript" src="vanilla-tilt.min.js"></script>
+    <script type="text/javascript">
+      // VanillaTilt.init(document.querySelector('.your-element'), {
+      //   max: 25,
+      //   speed: 400,
+      // });
+
+      //It also supports NodeList
+      VanillaTilt.init(document.querySelectorAll('.animal-box'), {
+        glare: true,
+        'max-glare': 0.1,
+      });
+    </script>
   </body>
 </html>
